# aca-py-did-kanon

./: .gitignore  README.md  pyproject.toml
did_kanon/: definition.py
did_kanon/v1_0/: __init__.py  config.py  cred_id_hash.py  identifiers.py  routes.py
did_kanon/v1_0/anoncreds/: issuance_listener.py  registry.py  revocation_setup.py  revreg_state.py
did_kanon/v1_0/contracts/: __init__.py  _base.py  abis.py  address_book.py  cred_def_registry.py  did_registry.py  merkle_state.py  org_registry.py  pool.py  schema_registry.py  status_registry.py
did_kanon/v1_0/did/: did_method.py  registrar.py  resolver.py
did_kanon/v1_0/zk/: __init__.py  _babyjub.py  _blake1.py  attributes.py  eddsa.py  groth16_prover.py  groth16_verifier.py  merkle_keccak.py  merkle_poseidon.py  mode_b.py  mode_b_verify.py  poseidon.py  witness.py  zk_issuer.py  zk_issuer_key.py
tests/data/: non_revocation_vk.json
tests/e2e/: run_anoncreds_interop.py  run_live_e2e.py
tests/unit/: test_config.py  test_contract_abis.py  test_cred_id_hash.py  test_groth16_verifier.py  test_identifiers.py  test_merkle_keccak.py  test_merkle_poseidon.py  test_witness.py
